--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "devDependencies": {
+    "daisyui": "^3.1.7"
+  },
+  "dependencies": {
+    "aos": "^3.0.0-beta.6",
+    "react-icons": "^4.10.1",
+    "swiper": "^9.4.1"
   }
 }
