--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "react-icons": "^4.10.1",
+    "react-visibility-sensor": "^5.1.1",
     "swiper": "^9.4.1"
   }
 }
