--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "daisyui": "^3.1.7"
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.7",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "next": "^13.4.9",
     "react-icons": "^4.10.1",
     "react-visibility-sensor": "^5.1.1",
     "swiper": "^9.4.1"
